<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Backboard</string>
    <string name="title_games">Games</string>
    <string name="title_tweets">Tweets</string>
    <string name="title_highlights">Highlights</string>
    <string name="title_standings">Standings</string>
    <string name="table_player">Player</string>
    <string name="table_min">MIN</string>
    <string name="table_pts">PTS</string>
    <string name="table_reb">REB</string>
    <string name="table_ast">AST</string>
    <string name="table_stl">STL</string>
    <string name="table_blk">BLK</string>
    <string name="table_br">BR</string>
    <string name="table_oreb">OREB</string>
    <string name="table_dreb">DREB</string>
    <string name="table_fgm">FGM</string>
    <string name="table_fga">FGA</string>
    <string name="table_fg_per">FG%</string>
    <string name="table_3pm">3PM</string>
    <string name="table_3pa">3PA</string>
    <string name="table_3p_per">3P%</string>
    <string name="table_ftm">FTM</string>
    <string name="table_fta">FTA</string>
    <string name="table_ft_per">FT%</string>
    <string name="table_pf">PF</string>
    <string name="table_to">TO</string>
    <string name="table_pm">+/-</string>
    <string name="no_games_scheduled">No games scheduled</string>
    <string name="away_team_won">Away team won</string>
    <string name="home_team_won">Home team won</string>
    <string name="tweets_shortcut_label">Tweets</string>
    <string name="tweets_disabled_message">Tweets tab disabled</string>
    <string name="highlights_shortcut_label">Highlights</string>
    <string name="highlights_disabled_message">Highlights tab disabled</string>
    <string name="game_card_transition_name">game_card_%1$s</string>
    <string name="game_card_detail_transition_name">game_card_detail</string>

</resources>